// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component testing renders UI as expected 1`] = `
Array [
  <h1>
    <a
      href="/"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      ChoreRunner
    </a>
  </h1>,
  <nav>
    <a
      href="/login"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      Login
    </a>
     
    <a
      href="/register"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      Sign up
    </a>
  </nav>,
]
`;

exports[`Badge component testing renders empty given no tabs 1`] = `
<Fragment>
  <h1>
    <Link
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/"
    >
      ChoreRunner
    </Link>
  </h1>
  <nav>
    <Link
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/login"
    >
      Login
    </Link>
     
    <Link
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/register"
    >
      Sign up
    </Link>
  </nav>
</Fragment>
`;
